deployments/app.deploymnet.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mynode-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mynode-app
  template:
    metadata:
      labels:
        app: mynode-app
    spec:
      containers:
      - name: mynode-app
        image:  node-docker
        ports:
        - containerPort: 4000
        imagePullPolicy: Never # Image should not be pulled
