deployments/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mynode-app
spec:
  selector:
    app: mynode-app
  ports:
    - port: 4000
      protocol: TCP
