deployments/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mynode-ingress
spec:
  rules:
  - host: bar.local
    http:
        paths:
          - path: /foo
            pathType: Prefix
            backend:
              service:
                name: mynode-app
                port:
                  number: 4000
